Adding a header with a active timer

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <title>Coding Quiz Challenge</title>
 </head>
 <body>
+    <header>
+        <p id="high-scores">View High Scores</p>
+        <p id="timer">Time: <span id="time">0</span></p>
+    </header>
     
     <script src="./assets/js/script.js"></script>
 </body>
