--- a/index.html
+++ b/index.html
@@ -13,6 +13,22 @@
         <p id="timer">Time: <span id="time">0</span></p>
     </header>
     
+    <div>
+        <div id="title">
+            <h1 id="title-text">Coding Quiz Challenge!</h1>
+        </div>
+
+        <div id="answers">
+            <p id="answers-text">Try to answer the following code-related questions within the time limit. 
+                                 Keep in mind that incorrect answers will penalize your scoreTime by ten seconds!
+            </p>
+        </div>
+
+        <div id="start">
+            <button id="start-button">Start Quiz</button>
+        </div>
+    </div>
+
     <script src="./assets/js/script.js"></script>
 </body>
 </html>
