Added functionality to navigate through the questions

--- a/index.html
+++ b/index.html
@@ -22,10 +22,17 @@
             <p id="answers-text">Try to answer the following code-related questions within the time limit. 
                                  Keep in mind that incorrect answers will penalize your scoreTime by ten seconds!
             </p>
+            <ol style="display: none"; id="option-list">
+                <li><button id="option-1">1. This is question 1</button></li>
+                <li><button id="option-2">2. This is question 2</button></li>
+                <li><button id="option-3">3. This is question 3</button></li>
+                <li><button id="option-4">4. This is question 4</button></li>
+            </ol>
         </div>
 
         <div id="start">
             <button id="start-button">Start Quiz</button>
+            <h3 style="display: none"; id="result"></h3>
         </div>
     </div>
 
